Kubernetes-Yaml-Files/kube-system.yaml
apiVersion: apps/v1
kind: Pod
metadata:
  name: haproxy-ingress
  namespace: csuf-cpsc531-hadoop-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy-ingress
  template:
    metadata:
      labels:
        app: haproxy-ingress
    spec:
      containers:
      - name: haproxy-ingress
        image: haproxytech/kubernetes-ingress
        ports:
        - containerPort: 8088
        resources:
          limits:
            memory: 2Gi
            cpu: 1000m
          requests:
            memory: 2Gi
            cpu: 1000m
