Kubernetes-Yaml-Files/slave02-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: slave02
  labels:
    app: hadoop
spec:
  nodeSelector:
    topology.kubernetes.io/region: us-west
    topology.kubernetes.io/zone: fullerton
  volumes:
  - name: config-volume
    persistentVolumeClaim:
      claimName: shared-pvc
  containers:
  - name: slave02
    image: "gitlab-registry.nrp-nautilus.io/focegueda/hadoop-test/hadoop:latest"
    resources:
      limits:
        memory: 2Gi
        cpu: 1000m
      requests:
        memory: 2Gi
        cpu: 1000m
    ports:
    - containerPort: 8088
      hostPort: 8088
      protocol: TCP
    - containerPort: 9864
      hostPort: 9864
      protocol: TCP
    - containerPort: 9000
      hostPort: 9000
      protocol: TCP
    - containerPort: 9870
      hostPort: 9870
      protocol: TCP
    - containerPort: 8042
      hostPort: 8042
      protocol: TCP
    - containerPort: 9868
      hostPort: 9868
      protocol: TCP
    - containerPort: 10020
      hostPort: 10020
      protocol: TCP
    - containerPort: 19888
      hostPort: 19888
      protocol: TCP
    volumeMounts:
    - name: config-volume
      mountPath: /config
    command: ["bash", "-c"]
    args: [
      "source ~/.bashrc; \
       sleep 30; \
       echo 'Fetching node IPs and updating /etc/hosts'; \
       export MASTER_IP=$(cat /config/master_ip); \
       export SLAVE01_IP=$(cat /config/slave01_ip); \
       echo $MASTER_IP master >> /etc/hosts; \
       echo $SLAVE01_IP slave01 >> /etc/hosts; \
       echo 'Updated /etc/hosts'; \
       echo 'awaiting for master to start'; \
       while ! nc -z master 9870; do sleep 3; done; \
       tail -f /dev/null; "
    ]
